--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: COMBINE Lab 
+subtitle: Website for the Computational Biology and Network Evolution Lab at Stony Brook University 
 ---
 
 <div class="posts-list">
